--- a/music/technical.html
+++ b/music/technical.html
@@ -9,7 +9,9 @@
 </title>
 <body>
 	<left>
-	<h1 class="mt-5"> Cryptwarblr Technical Details<hr></h1>
+	<h1 class="mt-5"> Casiotone MT-240 Technical Details<hr></h1>
+   <p class="para">
+      Circuit Bending details todo</p>
    	<p class="head">
    		<strong>Introduction</strong></p>
    	<p class="para">
