--- a/music/technical.html
+++ b/music/technical.html
@@ -9,9 +9,9 @@
 </title>
 <body>
 	<left>
-	<h1 class="mt-5"> Casiotone MT-240 Technical Details<hr></h1>
-   <p class="para">
-      Circuit Bending details todo</p>
+	<h1 class="mt-5"> Casiotone MT-240 technical details<hr></h1>
+   <p class="head">
+      <a href="mt240schematic.html" target="_blank">full reverse engineered schematic!!!</a></p>
    	<p class="head">
    		<strong>Introduction</strong></p>
    	<p class="para">
